[tool.poetry]
name = "flaskrag"
version = "0.1.0"
description = ""
authors = ["hH"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
plotly = "^5.24.1"
sqlparse = "^0.5.1"
sqlalchemy = "^2.0.36"
duckdb-engine = "^0.13.2"
flask = "^3.0.3"
flask-sock = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
